--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,40 @@
-Flask==1.1.1 # flask lib
-Flask-Cors==3.0.8 #A Flask extension for handling Cross Origin Resource Sharing (CORS), making cross-origin AJAX possible
-matplotlib #matplotlib
-numpy #numpy
-pandas #pandas
-scikit-learn # to get model lib
-kneed==0.5.1 #elbow plot
-xgboost==1.0.2 #pip install xgboost-1.0.2-cp36-cp36m-win32.whl
-Flask-MonitoringDashboard==3.0.6 # flask app monitor dashboard
-Jinja2==2.11.0 #Flask is based on the Jinja2 template engine
-Werkzeug==0.16.1 #Flask is based on the Werkzeug WSGI toolkit
-itsdangerous==1.1.0 #Various helpers to pass data to untrusted environments and to get it back safe and sound. Data is cryptographically signed to ensure that a token has not been tampered with.
-certifi==2019.11.28 #Certifi is a carefully curated collection of Root Certificates for validating the trustworthiness of SSL certificates while verifying the identity of TLS hosts.
-MarkupSafe==1.1.1 #MarkupSafe implements a text object that escapes characters so it is safe to use in HTML and XML. Characters that have special meanings are replaced so that they display as the actual characters. This mitigates injection attacks, meaning untrusted user input can safely be displayed on a page.
+APScheduler==3.11.0
+certifi==2019.11.28
+click==8.3.0
+colorama==0.4.6
+colorhash==2.1.0
+configparser==7.2.0
+contourpy==1.3.3
+cycler==0.12.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-MonitoringDashboard==3.0.6
+fonttools==4.60.1
+greenlet==3.2.4
+gunicorn==23.0.0
+itsdangerous==1.1.0
+Jinja2==2.11.0
+joblib==1.5.2
+kiwisolver==1.4.9
+kneed==0.5.1
+MarkupSafe==1.1.1
+matplotlib==3.10.6
+numpy==2.3.3
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+psutil==7.1.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.7.2
+scipy==1.16.2
+six==1.17.0
+SQLAlchemy==2.0.43
+threadpoolctl==3.6.0
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+Werkzeug==0.16.1
+xgboost==3.0.5
+gunicorn==23.0.0
